<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".passengers.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dim_05"
            android:paddingLeft="@dimen/dim_05">

            <ImageView
                android:layout_width = "match_parent"
                android:layout_height= "100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/taji_cabs_foregroundd"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="@dimen/dim_05"
            android:paddingLeft="@dimen/dim_05">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dim_20"
                android:layout_marginBottom="@dimen/dim_00"
                android:text="@string/welcome_taji"
                android:fontFamily="@font/cairo"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/text_margin"
                android:fontFamily="@font/cairo"
                android:text="@string/sign_in_text" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dim_05"
            android:paddingLeft="@dimen/dim_05">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_20"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/email"
                android:ems="10"
                android:paddingBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:inputType="textEmailAddress" >
            </androidx.appcompat.widget.AppCompatEditText>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dim_05"
            android:paddingLeft="@dimen/dim_05">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_20"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/password"
                android:ems="10"
                android:paddingBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:inputType="textPassword" >
            </androidx.appcompat.widget.AppCompatEditText>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dim_05"
            android:paddingLeft="@dimen/dim_05">

            <TextView
                android:id="@+id/authFailed"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/error"
                android:visibility="gone"
                android:text="@string/auth_failed"
                android:gravity="center_horizontal"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dim_05"
            android:paddingLeft="@dimen/dim_05">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/accountSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dim_35"
                android:layout_marginTop="@dimen/dim_35"
                android:layout_marginEnd="@dimen/dim_35"
                android:layout_marginBottom="@dimen/dim_35"
                android:background="@drawable/round_button"
                android:fontFamily="@font/cairo"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dim_20"
            android:paddingRight="@dimen/dim_20"
            android:paddingLeft="@dimen/dim_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/accountSignUp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/accountSignUp"
                    android:fontFamily="@font/cairo"
                    android:textAllCaps="false"
                    android:paddingRight="@dimen/dim_00"
                    android:paddingLeft="@dimen/dim_05"
                    android:layout_gravity="start"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/aboutTaji"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_marginTop="@dimen/dim_15"
                    android:layout_marginBottom="@dimen/dim_15"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:text="نوصل"
                    android:fontFamily="@font/cairo"
                    android:gravity="end"
                    android:textAllCaps="false"
                    android:paddingRight="@dimen/dim_05"
                    android:paddingLeft="@dimen/dim_00"
                    android:layout_gravity="end"/>
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="false"
            android:id="@+id/dragView">



        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>