<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout android:id="@+id/home_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="136dp"
    sothree:umanoShadowHeight="4dp"
    sothree:umanoParallaxOffset="100dp"
    sothree:umanoDragView="@+id/dragView"
    sothree:umanoOverlay="true"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- MAP CONTENT -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <fragment
            android:id="@+id/map_fragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/geo_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="150dp"
            app:srcCompat="@drawable/ic_geo_location" />
    </FrameLayout>

    <!-- SLIDING LAYOUT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="false"
        android:id="@+id/dragView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:background="@color/light_grey"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/block_places"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <fragment android:id="@+id/places_pick_up"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:clickable="true"
                    android:visibility="invisible"
                    android:layout_height="64dp" />

                <fragment android:id="@+id/place_destination"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:clickable="true"
                    android:visibility="invisible"
                    android:layout_height="64dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:visibility="invisible"
                    android:paddingRight="@dimen/dim_05"
                    android:paddingLeft="@dimen/dim_05">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/pick_up"
                        android:layout_width="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dim_35"
                        android:layout_marginBottom="@dimen/dim_35"
                        android:layout_marginEnd="@dimen/dim_10"
                        android:layout_marginStart="@dimen/dim_10"
                        android:background="@android:color/transparent"
                        android:textColor="@color/colorPrimary"
                        android:text="حدد نقطة الإلتقاء"
                        android:paddingEnd="@dimen/dim_15"
                        android:paddingStart="@dimen/dim_10"
                        android:textAlignment="viewStart"
                        android:layout_gravity="start" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/block_request"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:background="@color/light_grey"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_grey"
                    android:layout_marginBottom="@dimen/dim_05"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/dim_05"
                        android:paddingLeft="@dimen/dim_05"
                        android:paddingTop="@dimen/dim_10"
                        android:weightSum="5" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:layout_marginStart="@dimen/dim_20"
                            android:layout_marginEnd="@dimen/dim_20"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/dim_20"
                            android:layout_marginBottom="@dimen/dim_00"
                            android:text="@string/origin"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:id="@+id/origin_place"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="start"
                            android:layout_marginStart="@dimen/dim_20"
                            android:layout_marginEnd="@dimen/dim_20"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/dim_20"
                            android:layout_marginBottom="@dimen/dim_00"
                            android:text="@string/origin"
                            tools:ignore="SpUsage" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/dim_05"
                        android:paddingLeft="@dimen/dim_05"
                        android:paddingTop="@dimen/dim_10"
                        android:weightSum="5" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:layout_marginStart="@dimen/dim_20"
                            android:layout_marginEnd="@dimen/dim_20"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/dim_20"
                            android:layout_marginBottom="@dimen/dim_00"
                            android:text="@string/dest"
                            tools:ignore="SpUsage" />

                        <TextView
                            android:id="@+id/dest_place"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="start"
                            android:layout_marginStart="@dimen/dim_20"
                            android:layout_marginEnd="@dimen/dim_20"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/dim_20"
                            android:layout_marginBottom="@dimen/dim_00"
                            android:text="@string/origin"
                            tools:ignore="SpUsage" />

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/request_ride"
                        android:layout_width="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryDark"
                        android:textColor="@android:color/white"
                        android:text="@string/request_ride"
                        android:layout_gravity="center"/>

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>